# siktacka

./: CMakeLists.txt  Makefile
client/: AwaitableSocket.hpp  GUIConnection.cpp  GUIConnection.hpp  GameClient.cpp  GameClient.hpp  ServerConnection.cpp  ServerConnection.hpp  main.cpp
conn/: ClientPackage.cpp  ClientPackage.hpp
def/: binary.cpp  binary.hpp  config.hpp  ipaddr.cpp  ipaddr.hpp  types.cpp  types.hpp  util.cpp  util.hpp
parse/: parser.cpp  parser.hpp
server/: GameServer.cpp  GameServer.hpp  connect.cpp  connect.hpp  main.cpp  types.hpp
test/: Test.cpp  Test.hpp  ip_parsing.hpp  main.cpp  serialization.hpp
test/client/: main.cpp
test/client-stub/: main.cpp
test/gui-stub/: main.cpp
